# ocaml-gstreamer

./: .travis.yml  dune-project  gi-gstreamer.opam  gstreamer.opam  re-pin.sh
.ci/: Dockerfile.debian-buster  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-17.10  Dockerfile.ubuntu-18.04  install-deps.apt.sh  install-deps.brew.sh  install-deps.curl.sh  install-deps.linux.sh  install-deps.macos.sh  install-deps.opam.sh  install-deps.sh  install-deps.ubuntu.sh  run-tests.opam.sh  run-tests.sh  update-docker.sh
configurator/: discover.ml
e2e/: .gitignore
lib/: Allocation_params.ml  Allocation_params.mli  Allocator.ml  Allocator.mli  Allocator_flags.ml  Allocator_flags.mli  Bin.ml  Bin.mli  Bin_flags.ml  Bin_flags.mli  Buffer.ml  Buffer.mli  Buffer_copy_flags.ml  Buffer_copy_flags.mli  Buffer_flags.ml  Buffer_flags.mli  Buffer_list.ml  Buffer_list.mli  Buffer_pool.ml  Buffer_pool.mli  Buffer_pool_acquire_flags.ml  Buffer_pool_acquire_flags.mli  Buffering_mode.ml  Buffering_mode.mli  Bus.ml  Bus.mli  Bus_flags.ml  Bus_flags.mli  Bus_sync_reply.ml  Bus_sync_reply.mli  Caps.ml  Caps.mli  Caps_flags.ml  Caps_flags.mli  Caps_intersect_mode.ml  Caps_intersect_mode.mli  Clock.ml  Clock.mli  Clock_entry_type.ml  Clock_entry_type.mli  (+196 more)
tests/: Test_core.ml  dune  init.ml  tests.ml
