(rule
 (targets c_flags.sexp
            c_library_flags.sexp)
  (deps    ../configurator/discover.exe)
  (action  (run %{deps})))

(library
 (name        Gstreamer)
  (public_name gi-gstreamer)
  (libraries ctypes ctypes.foreign gi-glib2 gi-gobject)
  (c_names         dyn_load_constants_stubs)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
  (flags -open GLib -open GObject)
  )
